name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base < 5, miso , aeson , containers , jsaddle-warp , transformers , text
  default-language:    Haskell2010
